# realtorfarm

./: .gitignore  INSTALL.md  LICENSE  README.md  install.sh  pyproject.toml  uninstall.sh
.claude/commands/: realtorfarm.md
.github/workflows/: daily.yml
agents/: deep-research.md  outreach-qa.md  record-collector.md  signal-scorer.md  source-discovery.md
config/: signals.json
config/cities/burien/: sources.json
config/cities/kent/: sources.json
data/: sample_records.csv
docs/plans/: 2026-05-22-multi-city-collection-design.md  2026-05-22-multi-city-collection-impl.md  2026-05-23-bankruptcy-collection-design.md  2026-05-23-bankruptcy-collection-impl.md  2026-05-23-phase-b-collection-design.md  2026-05-23-phase-b-collection-impl.md  2026-05-23-reo-collection-design.md  2026-05-23-reo-collection-impl.md
scripts/: collect_daily.py  normalize_records.py  run_daily.py  validate_output.py
skills/realtorfarm/: SKILL.md
src/realtorfarm/: __init__.py  blob.py  cli.py  ingest.py  models.py  output.py  reporting.py  scoring.py  signals.py
src/realtorfarm/collectors/: reo.py  (+11 more)
tests/: test_blob.py  test_cli.py  test_collect_daily.py  test_collectors_bankruptcy.py  test_collectors_browser_use.py  test_collectors_courtlistener.py  test_collectors_courts.py  test_collectors_firecrawl.py  test_collectors_kc_gis.py  test_collectors_legal_notices.py  test_collectors_parcel_enrichment.py  test_collectors_recorder_direct.py  test_collectors_reo.py  test_collectors_treasury.py  test_market_status.py  test_public_notice_extractors.py  test_scoring.py  test_source_reports.py
(+5 files in other folders)
